@@ -1,4 +1,13 @@
-2017-04-14  Xiaowei Zhan  <zhanxw@bunny.swmed.edu>
+2017-06-09  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>
+
+	* Add "--outputID" to output VCF ID to association results (fix #14, #24)
+	* Improve error messages when loading decomposed kinship file (fix #29)
+	* Add "RVTESTS successfully exit" to stdout (fix #31)
+	* Add FASTLMM_DEBUG environment variable to ease debugging (refer to #32)
+	* Fix strtol related warning (possibly) (refer to #33)
+	* Clean codes
+
+2017-04-14  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>
 
 	* Fix a critical bug related to AF calculation (issue 15)
 	* Fix siteFile flag and provide prompt when it's used
